Added four peer dependencies to dev dependency.

--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/runtime": "^7.2.0",
+    "@kevinwang0316/cloudwatch": "^1.0.4",
+    "@kevinwang0316/jwt-verify": "^1.0.2",
+    "@kevinwang0316/log": "^1.0.1",
+    "@kevinwang0316/mongodb-helper": "^1.0.16",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "coveralls": "^3.0.2",
