--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@kevinwang0316/cloudwatch": "^1.0.4",
     "@kevinwang0316/jwt-verify": "^1.0.2",
     "@kevinwang0316/log": "^1.0.1",
-    "@kevinwang0316/mongodb-helper": "^1.0.16"
+    "@kevinwang0316/mongodb-helper": "^1.0.16",
+    "mongo-sanitize": "^1.0.1"
   },
   "dependencies": {},
   "devDependencies": {
@@ -55,6 +56,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "jest": "^23.6.0",
+    "mongo-sanitize": "^1.0.1",
     "uglify-js": "^3.4.9"
   }
 }
