--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "@kevinwang0316/mongodb-helper": "^1.0.16",
     "mongo-sanitize": "^1.0.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "aws-sdk": "^2.397.0",
+    "aws-xray-sdk": "^2.2.0",
+    "mongodb": "^3.1.13"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.0",
@@ -56,6 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "jest": "^23.6.0",
+    "jsonwebtoken": "^8.4.0",
     "mongo-sanitize": "^1.0.1",
     "uglify-js": "^3.4.9"
   }
