--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jest": "^23.6.0",
     "jsonwebtoken": "^8.4.0",
     "mongo-sanitize": "^1.0.1",
+    "sinon": "^7.2.3",
     "uglify-js": "^3.4.9"
   }
 }
