--- a/package.json
+++ b/package.json
@@ -37,11 +37,7 @@
     "@kevinwang0316/mongodb-helper": "^1.0.16",
     "mongo-sanitize": "^1.0.1"
   },
-  "dependencies": {
-    "aws-sdk": "^2.397.0",
-    "aws-xray-sdk": "^2.2.0",
-    "mongodb": "^3.1.13"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.0",
