--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@kevinwang0316/jwt-verify": "^1.0.2",
     "@kevinwang0316/log": "^1.0.1",
     "@kevinwang0316/mongodb-helper": "^1.0.16",
+    "@kevinwang0316/mysql-helper": "^1.0.0",
     "mongo-sanitize": "^1.0.1",
     "aws-xray-sdk": "^2.2.0",
     "mongodb": "^3.1.13",
@@ -42,26 +43,26 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/runtime": "^7.2.0",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
     "@kevinwang0316/cloudwatch": "^1.0.4",
     "@kevinwang0316/jwt-verify": "^1.0.2",
     "@kevinwang0316/log": "^1.0.1",
     "@kevinwang0316/mongodb-helper": "^1.0.16",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "coveralls": "^3.0.2",
-    "eslint": "^5.12.0",
+    "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
-    "jest": "^23.6.0",
-    "jsonwebtoken": "^8.4.0",
+    "jest": "^24.7.1",
+    "jsonwebtoken": "^8.5.1",
     "mongo-sanitize": "^1.0.1",
-    "sinon": "^7.2.3",
-    "uglify-js": "^3.4.9"
+    "sinon": "^7.3.2",
+    "uglify-js": "^3.5.4"
   }
 }
