--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@kevinwang0316/jwt-verify": "^1.0.2",
     "@kevinwang0316/log": "^1.0.1",
     "@kevinwang0316/mongodb-helper": "^1.0.16",
+    "@kevinwang0316/mysql-helper": "^1.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "coveralls": "^3.0.3",
