--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@kevinwang0316/lambda-middlewares",
-  "version": "1.0.2",
+  "version": "2.0.2",
   "description": "A set of middlewares that helps Lambda functions.",
   "scripts": {
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "unitTest": "jest",
     "unitTestWatch": "jest --watch",
     "unitTestCoverage": "jest --coverage",
-    "build": "babel src --out-dir distribution && uglifyjs distribution/lambda-middlewares.js -c -m -o distribution/lambda-middlewares.js"
+    "build": "babel src --out-dir distribution && uglifyjs distribution/lambda-middlewares.js -c -m -o distribution/lambda-middlewares.js && uglifyjs distribution/mongodb.js -c -m -o distribution/mongodb.js && uglifyjs distribution/mysql.js -c -m -o distribution/mysql.js && uglifyjs distribution/jwt.js -c -m -o distribution/jwt.js && cp package.json ./distribution"
   },
-  "main": "./distribution/lambda-middlewares.js",
+  "main": "./lambda-middlewares.js",
   "author": "Kevin W.",
   "license": "MIT",
   "jest": {
@@ -39,7 +39,8 @@
     "mongo-sanitize": "^1.0.1",
     "aws-xray-sdk": "^2.2.0",
     "mongodb": "^3.1.13",
-    "aws-sdk": "^2.388.0"
+    "aws-sdk": "^2.388.0",
+    "mysql": "^2.17.0"
   },
   "dependencies": {},
   "devDependencies": {
